[project]
name = "csm-lester-voice"
version = "0.1.0"
description = "Text-to-speech generation using the fine-tuned lesterthomas/csm-lester-voice model"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "transformers==4.52.3",
    "datasets==4.3.0",
    "torch>=2.0.0",
    "soundfile>=0.12.0",
    "accelerate>=0.20.0",
    "librosa>=0.10.0",
]
